--- a/css/responsivelogin.css
+++ b/css/responsivelogin.css
@@ -13,22 +13,15 @@
 		left: 50%;
 		margin: 1em auto;
 		margin-left: -142.1955px;
-		margin-top: -210px;
+		margin-top: -100px;
 		position: absolute;
 		top: 50%;
 		width: 284.391px;
 	}
-}
-@media screen and (max-height: 500px) and (min-width: 480px){
-	figure img
+	#title
 	{
-		width: 64px;
-		margin: auto;
+		width: 90%;
 	}
-	#login
-	{
-		margin-top: -130px;
-	}	
 }
 @media screen and (min-width: 600px) and (max-width: 768px){
 	figure img
