--- a/css/stylelogin.css
+++ b/css/stylelogin.css
@@ -1,18 +1,17 @@
 @font-face {
 	font-family: 'icomoon';
-	src:url('fonts/icomoon.eot');
-	src:url('fonts/icomoon.eot?#iefix') format('embedded-opentype'),
-		url('fonts/icomoon.woff') format('woff'),
-		url('fonts/icomoon.ttf') format('truetype'),
-		url('fonts/icomoon.svg#icomoon') format('svg');
+	src:url('../fonts/icomoon.eot');
+	src:url('../fonts/icomoon.eot?#iefix') format('embedded-opentype'),
+		url('../fonts/icomoon.woff') format('woff'),
+		url('../fonts/icomoon.ttf') format('truetype'),
+		url('../fonts/icomoon.svg#icomoon') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
 body
 {
-	color: #283348;
+	background: url("../images/bg.png");
 	font-size: 16px;
-	height: 100%;
 }
 figure
 {
@@ -29,102 +28,109 @@ h1
 	padding-top: 1em;
 	text-align: center;
 }
-#button_field
+#info
 {
-	background: #d4dedf;
-	border-bottom-left-radius: 10px;
-	border-bottom-right-radius: 10px;
-	border-top: 1px solid #999BA0;
-	min-height: 3em;
-	margin: 0;
-	padding: 1em 0.5em;
+	font-style: italic;
+}
+#info a
+{
+	color: #0F4FA8;
+	display: block;
+	font-style: normal;
+	margin: 0.3em 0 0.5em 0;
+	padding: 0.5em 0; 
+	text-decoration: none;
 }
 #login
 {
-	-moz-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
-	-webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
-	background: #f3f3f3;
-	border-radius: 10px;
-	border-left: 1px solid white;
-	box-shadow: 0 1px 3px rgba(0,0,0,0.5);
+	margin: 1.5em 10px 0 10px; 
+	background: white;
+	box-shadow: 2px 2px 3px rgba(0,0,0,1);
+	border-radius: 1em 0 1em 0;
 	display: block;
-	left: 50%;
-	margin: 1em auto;
-	margin-left: -142.1955px;
-	margin-top: -210px;
-	position: absolute;
-	top: 50%;
-	width: 284.391px;
+	margin: 2.5em 1.6em 2em 1.6em;
+	min-height: 340px;
+	padding: 6em 1em 1em 1em;
+	position: relative;
 }
-#login_button, .input_field
+#login_button
+{
+	background: #FFBC00;
+	border-radius: 5px;
+	border-bottom: 3px solid #704b00;
+	border-left: 1px solid transparent;
+	border-right: 1px solid transparent;
+	border-top: 1px solid transparent;
+	color: #704b00;
+	display: block;
+	float: right;
+	padding: 1em;
+}
+#password_label:after
+{
+	font-size: 1.5em;
+	content: "\e616";
+	font-family: "icomoon";
+}
+#title
+{
+	background: #0F4FA8;
+	border-left: 1px solid rgba(255,255,255,0.1);
+	border-radius: 5px 0 5px 0;
+	border-top: 1px solid rgba(255,255,255,0.1);
+	box-shadow: 0 3px 3px rgba(0,0,0,0.5);
+	color: white;
+	display: block;
+	left: -1em;
+	padding: 1em 2em;
+	position: absolute;
+	top: 2em;
+	width: 88%;
+}
+#title:before
+{
+	border-left: 15px solid transparent;
+	border-top: 15px solid #05316D;
+	content: "";
+	top: 100%;
+	position: absolute;
+	left: 0;
+}
+#title:after
+{
+	border-left: 16px solid #05316D;
+	border-top: 16px solid transparent;
+	content: "";
+	bottom: 100%;
+	position: absolute;
+	right: 1px;
+}
+#user, #password
 {
 	-moz-transition: all 0.5s;
 	-ms-transition: all 0.5s;
 	-o-transition: all 0.5s;
 	-webkit-transition: all 0.5s;
 	transition: all 0.5s;
+	border: 1px solid #05316D;
+	border-radius: 25px;
+	margin: 0.5em;
+	padding: 0.8em;
+	text-align: right;
+	width: 69%;
 }
-#login_button
+#user_fields
 {
-	background: #56c2e1;
-	border: 1px solid #46b3d3;
-	border-bottom: 3px solid #283348;
-	border-radius: 5px;
-	box-shadow: inset 0 0 2px rgba(256,256,256,0.75);
-	color: white;
-	display: block;
-	float: right;
-	padding: 1em 0.5em;
-	text-shadow: 0px 1px 0 rgba(0,0,0,0.25);
-	-moz-box-shadow: inset 0 0 2px rgba(256,256,256,0.75);
-	-webkit-box-shadow: inset 0 0 2px rgba(256,256,256,0.75);
+	border-bottom: 1px solid rgba(150,150,150,0.4);
+	padding: 1em 0 1em 0;
 }
-#login_button:hover
+#user:focus, #password:focus
 {
-	background: #3f9db8;
-	border: 1px solid rgba(256,256,256,0.75);
-	box-shadow: inset 0 1px 3px rgba(0,0,0,0.5);
-	-moz-box-shadow: inset 0 1px 3px rgba(0,0,0,0.5);
-	-webkit-box-shadow: inset 0 1px 3px rgba(0,0,0,0.5);
+	background: #BEC9D0;
 }
-#login_button:focus
+#user_label:after
 {
-	background: #56c2e1;
-	bottom: -1px;
-	box-shadow: inset 0 1px 6px rgba(256,256,256,0.75);
-	-moz-box-shadow: inset 0 1px 6px rgba(256,256,256,0.75);
-	-webkit-box-shadow: inset 0 1px 6px rgba(256,256,256,0.75);
-}
-#login_container
-{
-	background: #283348;
-	padding: 0.2em 0;
-	top: 0;
-	width: 100%;
-}
-#password_field
-{
-	border-bottom: 1px solid white;
-	margin: 0;
-	padding: 0.5em;
-}
-#user_field
-{
-	margin: 0; 
-	padding: 0.5em;
-}
-.input_field
-{
-	border-radius: 5px;
-	margin: 0.4em;
-	padding: 1em;
-	width: 80%;
-}
-.input_field:focus
-{
-	background: #E0E3E7;
-}
-.login_label
-{
-	margin-left: 0.4em;
+	font-size: 1.5em;
+	content: "\e617";
+	font-family: "icomoon";
 }
