--- a/css/stylelogin.css
+++ b/css/stylelogin.css
@@ -44,7 +44,7 @@ h1
 #login
 {
 	margin: 1.5em 10px 0 10px; 
-	background: white;
+	background: #ecf0f1;
 	box-shadow: 2px 2px 3px rgba(0,0,0,1);
 	border-radius: 1em 0 1em 0;
 	display: block;
