--- a/css/responsive.css
+++ b/css/responsive.css
@@ -80,7 +80,7 @@
 	{
 		transition: all 0.5s;
 		border-bottom: 2px solid #2980b9;
-		color: white;
+		color: #E5E8E9;
 		display: block;
 		font-weight: bold;
 		padding: 0.5em 0;
@@ -89,6 +89,10 @@
 		width: 100%;
 	}
 	#up_content ul li a:hover
+	{
+		color: black;
+	}
+	.current_month a
 	{
 		color: black;
 	}
@@ -139,6 +143,11 @@
 		top: 1.2em;
 		width: 200px;
 	}
+	.search_field:focus
+	{
+		background: #E0E3E7;
+		width: 30%;
+	}
 }
 @media screen and (min-width: 1024px){
 	nav
@@ -188,7 +197,7 @@
 	{
 		transition: all 0.5s;
 		border-bottom: 2px solid #2980b9;
-		color: white;
+		color: #E5E8E9;
 		display: block;
 		font-weight: bold;
 		padding: 0.5em 0;
