--- a/css/responsive.css
+++ b/css/responsive.css
@@ -21,6 +21,12 @@
 		content: "AGENDA";
 		font-family: "icomoon";
 	}
+	#appointment
+	{
+		display: inline-block;
+		border: 1px solid red;
+		margin: 1em 0;
+	}
 	#departments a:before
 	{
 		color: white;
@@ -107,6 +113,30 @@
 		position:absolute;
 		top: 100%;
 	}
+	.draggable_hour_1
+	{
+		width: 100px;
+	}
+	.draggable_hour_2
+	{
+		width: 100px;
+	}
+	.draggable_hour_3
+	{
+		width: 100px;
+	}
+	.draggable_hour_4
+	{
+		width: 100px;
+	}
+	.draggable_hour_5
+	{
+		width: 100px;
+	}
+	.draggable_hour_6
+	{
+		width: 100px;
+	}
 	.next_month:after
 	{
 		background: rgba(189, 195, 199,0.5);
@@ -150,6 +180,23 @@
 	}
 }
 @media screen and (min-width: 1024px){
+	#appointment
+	{
+		background: #fff;
+		border-radius: 5px;
+		display: inline-block;
+		margin: 1em 0;
+		width: 43%;
+	}
+	#appointment h3
+	{
+		padding-left: 1em;
+	}
+	#appointment hr
+	{
+		border: 1px solid #eee;
+		padding: 0 0.5em;
+	}
 	nav
 	{
 		background: #878787;
@@ -368,6 +415,30 @@
 	.current a
 	{
 		text-decoration: none;
+	}
+	.draggable_hour_1
+	{
+		width: 120px;
+	}
+	.draggable_hour_2
+	{
+		width: 120px;
+	}
+	.draggable_hour_3
+	{
+		width: 120px;
+	}
+	.draggable_hour_4
+	{
+		width: 120px;
+	}
+	.draggable_hour_5
+	{
+		width: 120px;
+	}
+	.draggable_hour_6
+	{
+		width: 120px;
 	}
 	.next_month:after
 	{
