--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,13 @@
+/*
+	Los elementos CSS3 se acomodan alfabéticamente en el siguiente
+	orden:
+			* Etiquetas de Pre-Render (@)
+			* Etiquetas semánticas (body, header, etc.)
+			* Identificadores (#)
+			* Clases (.)
+
+	Entre ellas también se acomodan alfabéticamente.
+*/
 @font-face {
 	font-family: 'icomoon';
 	src:url('../fonts/icomoon.eot');
@@ -40,73 +50,6 @@ header figure, #notifications
 	margin-right: 0;
 	position: relative;
 	vertical-align: top;
-}
-#menu
-{
-	background: rgba(44, 62, 80,0.96);
-	border: 2px solid #2980b9; 
-	border-radius: 1em;
-	display: block;
-	list-style: none;
-	margin: 0;
-	padding: 1em;
-	position: absolute;
-	right: 1em;
-	text-align: left;
-	top: 6em;
-	width: 200px;
-}
-#menu:after
-{
-	border-bottom: 20px solid #2980b9;
-	border-left: 20px solid transparent;
-	border-right: 20px solid transparent;
-	content: "";
-	top: -20px;
-	position: absolute;
-	left: 70%;
-}
-#menu li
-{
-	padding: 0;
-	margin: 0;	
-}
-#menu li a
-{
-	color: white;
-	display: block;
-	padding: 0.5em 0;
-}
-.menu_profile:hover, .menu_help:hover, .menu_conf:hover
-{
-	background: #34495e;
-}
-.menu_profile:before
-{
-	content: "\e617";
-	font-family: "icomoon";
-}
-.menu_help:before
-{
-	content: "\e61c";
-	font-family: "icomoon";
-}
-.menu_conf:before
-{
-	content: "\e60a";
-	font-family: "icomoon";
-}
-.close_session
-{
-	border-bottom: 3px solid #75231A;
-	border-radius: 5px;
-	background: #e74c3c;
-	margin-top: 1em;
-	text-align: center;
-}
-.close_session:hover
-{
-	background: #C23828;
 }
 header #logo img
 {
@@ -183,11 +126,6 @@ nav ul li:hover
 {
 	background: #aaa;
 }
-table
-{
-	margin-top: 4em;
-	margin-bottom: 0.5em;
-}
 th
 {
 	background: #2980b9;
@@ -228,6 +166,55 @@ th
 	text-align: center;
 	top: -1.7em;
 	width: 120px;
+}
+#content_subtitle
+{
+	background: #DD4F24;
+	border-radius: 0.3em 0 0 0.3em;
+	box-shadow: 0 1px 3px rgba(0,0,0,0.5);
+	color: white;
+	font-weight: bold;
+	left: -0.5em;
+	padding: 0.5em 1em;
+	position: absolute;
+	top: 1.5em;
+	width: 70%;
+}
+#content_subtitle:before
+{
+	border-left: 19px solid #DD4F24;
+	border-top: 19px solid transparent;
+	content: "";
+	right: -1.2em;
+	position:absolute;
+	top:0;
+}
+#content_subtitle:after
+{
+	border-right: 19px solid transparent;
+	border-top: 19px solid #DD4F24;
+	content: "";
+	right:-1.2em;
+	position:absolute;
+	bottom:0;
+}
+#day_table
+{
+	padding: 0; 
+	margin: 1em 0;
+	width: 100%;
+}
+#table_body
+{
+	display: block;
+	width: 100%;
+}
+#down_text_cal:after
+{
+	content: "\e600";
+	font-family: "icomoon";
+	font-style: normal;
+	font-weight: bold;
 }
 #departments, #donator, #patients
 {
@@ -336,47 +323,46 @@ th
 	content: "\e60b";
 	font-family: "icomoon";
 }
+#menu
+{
+	background: rgba(44, 62, 80,0.96);
+	border: 2px solid #2980b9; 
+	border-radius: 1em;
+	display: block;
+	list-style: none;
+	margin: 0;
+	padding: 1em;
+	position: absolute;
+	right: 1em;
+	text-align: left;
+	top: 6em;
+	width: 200px;
+}
+#menu:after
+{
+	border-bottom: 20px solid #2980b9;
+	border-left: 20px solid transparent;
+	border-right: 20px solid transparent;
+	content: "";
+	top: -20px;
+	position: absolute;
+	left: 70%;
+}
+#menu li
+{
+	padding: 0;
+	margin: 0;	
+}
+#menu li a
+{
+	color: white;
+	display: block;
+	padding: 0.5em 0;
+}
 #new:after
 {
 	content: "\e619";
 	font-family: "icomoon";
-}
-#content_subtitle
-{
-	background: #DD4F24;
-	border-radius: 0.3em 0 0 0.3em;
-	box-shadow: 0 1px 3px rgba(0,0,0,0.5);
-	color: white;
-	font-weight: bold;
-	left: -0.5em;
-	padding: 0.5em 1em;
-	position: absolute;
-	top: 1.5em;
-	width: 70%;
-}
-#content_subtitle:before
-{
-	border-left: 19px solid #DD4F24;
-	border-top: 19px solid transparent;
-	content: "";
-	right: -1.2em;
-	position:absolute;
-	top:0;
-}
-#content_subtitle:after
-{
-	border-right: 19px solid transparent;
-	border-top: 19px solid #DD4F24;
-	content: "";
-	right:-1.2em;
-	position:absolute;
-	bottom:0;
-}
-#day_table
-{
-	display: block;
-	margin: 1em 0;
-	width: auto;
 }
 #notifications
 {
@@ -529,6 +515,18 @@ th
 	padding-left: 0.4em; 
 	width: 10%;
 }
+.close_session
+{
+	border-bottom: 3px solid #75231A;
+	border-radius: 5px;
+	background: #e74c3c;
+	margin-top: 1em;
+	text-align: center;
+}
+.close_session:hover
+{
+	background: #C23828;
+}
 .contenido_item_perfil
 {
 	border-top: #2C8199 solid 1px;
@@ -573,82 +571,109 @@ th
 	background: #ccc;
 	height: 100px;
 }
+.day_number
+{
+	color: white;
+	margin: 0;
+	font-size: 1.8em;
+}
+.meridiane
+{
+	color: white;
+	margin: 0;
+	font-size: 0.8em;
+}
 .day_title
 {
 	background: #1A233C;
 	color: white;
 }
+.draggable_hour_1, 
+.draggable_hour_2, 
+.draggable_hour_3, 
+.draggable_hour_4, 
+.draggable_hour_5, 
+.draggable_hour_6
+{
+	font-size: 0.8em
+} 
 .draggable_hour_1
 {
 	background: #16a085;
-	border-radius: 10px;
+	border-radius: 3px;
 	box-shadow: 0 1px 2px rgba(0,0,0,0.5);
 	color: white;
 	display: block;
-	font-size: 0.9em;
 	padding: 0.2em 1em;
-	position: relative;
+	position: absolute;
 	text-align: center;
+	top:0;
+	width: 25px;
 }
 .draggable_hour_2
 {
 	background: #8e44ad;
-	border-radius: 10px;
+	border-radius: 3px;
 	box-shadow: 0 1px 2px rgba(0,0,0,0.5);
 	color: white;
 	display: block;
-	font-size: 0.9em;
 	padding: 0.2em 1em;
-	position: relative;
+	position: absolute;
 	text-align: center;
+	top:0;
+	width: 25px;
 }
 .draggable_hour_3
 {
 	background: #c0392b;
-	border-radius: 10px;
+	border-radius: 3px;
 	box-shadow: 0 1px 2px rgba(0,0,0,0.5);
 	color: white;
 	display: block;
-	font-size: 0.9em;
 	padding: 0.2em 1em;
-	position: relative;
+	position: absolute;
 	text-align: center;
+	top:0;
+	width: 25px;
 }
 .draggable_hour_4
 {
 	background: #d35400;
-	border-radius: 10px;
+	border-radius: 3px;
 	box-shadow: 0 1px 2px rgba(0,0,0,0.5);
 	color: white;
 	display: block;
-	font-size: 0.9em;
 	padding: 0.2em 1em;
-	position: relative;
+	position: absolute;
 	text-align: center;
+	top:0;
+	width: 25px;
 }
 .draggable_hour_5
 {
 	background: #f39c12;
-	border-radius: 10px;
+	border-radius: 3px;
 	box-shadow: 0 1px 2px rgba(0,0,0,0.5);
 	color: white;
 	display: block;
-	font-size: 0.9em;
 	padding: 0.2em 1em;
-	position: relative;
+	position: absolute;
 	text-align: center;
+	top:0;
+	width: 25px;
 }
 .draggable_hour_6
 {
 	background: #27ae60;
-	border-radius: 10px;
+	border-radius: 3px;
 	box-shadow: 0 1px 2px rgba(0,0,0,0.5);
 	color: white;
 	display: block;
-	font-size: 0.9em;
 	padding: 0.2em 1em;
-	position: relative;
+	position: absolute;
 	text-align: center;
+	top:0;
+	width: 25px;
 }
 .draggable_hour_1:after,
 .draggable_hour_2:after,
@@ -660,7 +685,7 @@ th
 	color: rgba(236, 240, 241,0.5);
 	content: "...";
 	font-size: 2em;
-	margin-top: -17px;
+	margin-top: -16px;
 	position: absolute;
 	right: -0.3em;
 	top: 50%;
@@ -698,9 +723,10 @@ th
 }
 .droppable_hour
 {
-	border: 1px dashed #7f8c8d;
+	border-right: 1px solid #7f8c8d;
 	margin: 0;
 	padding: 0;
+	position: relative;
 	width: 10%;
 }
 .droppable_hour:last-child
@@ -718,13 +744,6 @@ th
 	color: #3498db;
 	font-style: italic;
 }
-#down_text_cal:after
-{
-	content: "\e600";
-	font-family: "icomoon";
-	font-style: normal;
-	font-weight: bold;
-}
 .fixed
 {
 	position: fixed; 
@@ -733,11 +752,19 @@ th
 .hour_row
 {
 	background: #bdc3c7;
-	border-bottom: 1px dashed #7f8c8d;
+	border-bottom: 1px solid #7f8c8d;
 	border-left: 1px solid #95a5a6;
 	border-right: 1px solid #95a5a6;
-	height: 50px;
+	height: 25px;
 	padding: 0;
+}
+.hour_row:nth-child(4n+4)
+{
+	border-bottom: 1px solid #2c3e50;
+}
+.hour_row:nth-child(2n+1)
+{
+	border-bottom: 1px dashed #7f8c8d;
 }
 .hour_row:first-child
 {
@@ -749,13 +776,37 @@ th
 }
 .left_hour
 {
+	background: #2980b9;
 	border-right: 1px solid #2c3e50;
 	color: #2c3e50;
 	font-weight: normal;
 	font-size: 0.9em;
 	padding: 1em 0.2em;
 	text-align: center;
-	width: 10%;
+	width: 5%;
+}
+.left_hour:last-child
+{
+	border-bottom: 2px solid transparent;
+}
+.menu_profile:hover, .menu_help:hover, .menu_conf:hover
+{
+	background: #34495e;
+}
+.menu_profile:before
+{
+	content: "\e617";
+	font-family: "icomoon";
+}
+.menu_help:before
+{
+	content: "\e61c";
+	font-family: "icomoon";
+}
+.menu_conf:before
+{
+	content: "\e60a";
+	font-family: "icomoon";
 }
 .month
 {
